# advent-of-code

./: .gitignore
2015/17 - No Such Thing As Too Much/: 17.py
2018/day03/: Cargo.toml
2018/day04/: Cargo.toml
2019/10 - Monitoring Station/: 10.py
2020/: README.md
2020/01a - Report Repair/: main.swift
2020/02 - Password Philosophy/: main.swift
2020/03 - Toboggan Trajectory/: main.swift
2020/04 - Passport Processing/: day04.swift
2020/05 - Binary Boarding/: day05.swift  input
2020/06 - Custom Customs/: day06.swift
2020/07 - Handy Haversacks/: day07.swift
2020/08 - Handheld Halting/: main.swift
2020/09 - Encoding Error/: main.swift
2020/10 - Adapter Array/: main.swift
2020/11 - Seating System/: main.swift
2020/12 - Rain Risk/: input  main.swift
2020/13 - Shuttle Search/: crt.py  main.swift
2020/14 - Docking Data/: main.swift
2020/15 - Rambunctious Recitation/: main.swift
2020/16 - Ticket Translation/: main.swift
2020/17 - Conway Cubes/: main.swift
2020/18 - Operation Order/: input  main.swift
2020/19 - Monster Messages/: main.swift  rules  rules.original
2021/: README.md
2021/15 - Chiton/: 15.py
rust2015/: Cargo.toml
rust2022/: Cargo.toml
rust2023/: .gitignore  Cargo.toml
rust2023/src/: common.rs  main.rs  maps.rs
rust2023/src/days/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  mod.rs
rust2023/src/inputs/: day08-test.input
(+76 files in other folders)
