[package]
name = "rust2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii_table = "4.0.3"
clap = { version = "4.0.29", features = ["derive"] }
num = "0.4.0"
regex = { version = "1.7.0", features = [] }
